@startuml

title __COMMUNICATION's Class Diagram__\n

  namespace swarm {
    namespace robot {
      namespace communication {
        abstract class swarm.robot.communication.Communication {
            # robotId : int
            + Communication()
            {abstract} + sendMessage()
            {abstract} + sendMessage()
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace communication {
        class swarm.robot.communication.DirectedCommunication {
            - topicsSub : HashMap<mqttTopic, String>
            + DirectedCommunication()
            + handleSubscription()
            + sendMessage()
            + sendMessage()
            - subscribe()
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace communication {
        enum mqttTopic {
          COMMUNICATION_IN_DIR
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace communication {
        class swarm.robot.communication.SimpleCommunication {
            - topicsSub : HashMap<mqttTopic, String>
            + SimpleCommunication()
            + handleSubscription()
            + sendMessage()
            + sendMessage()
            - subscribe()
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace communication {
        enum mqttTopic {
          COMMUNICATION_IN_SIMP
        }
      }
    }
  }
  

  swarm.robot.communication.Communication .up.|> swarm.Interfaces.IMqttHandler
  swarm.robot.communication.Communication o-- swarm.mqtt.RobotMqttClient : robotMqttClient
  swarm.robot.communication.DirectedCommunication -up-|> swarm.robot.communication.Communication
  swarm.robot.communication.DirectedCommunication +-down- swarm.robot.communication.DirectedCommunication.mqttTopic
  swarm.robot.communication.SimpleCommunication -up-|> swarm.robot.communication.Communication
  swarm.robot.communication.SimpleCommunication +-down- swarm.robot.communication.SimpleCommunication.mqttTopic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
